fix: package.jsonの修正、@types/nodeのバージョンを22.7.9に更新

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "packageManager": "pnpm@10.11.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "back": "pnpm -F apps/backend",
-    "front": "pnpm -F apps/frontend",
-    "dev:back": "pnpm -F apps/backend dev",
-    "dev:front": "pnpm -F apps/frontend dev",
+    "back": "pnpm -F backend",
+    "front": "pnpm -F frontend",
+    "dev:back": "pnpm -F backend dev",
+    "dev:front": "pnpm -F frontend dev",
     "dev": "pnpm dev:back & pnpm dev:front",
     "lint": "biome lint .",
     "format": "biome format --write .",
