--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,15 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "includes": ["**/*.ts", "**/*.tsx", "**/*.jsx", "**/*.json", "**/*.md"]
+    "includes": [
+      "**/*.ts",
+      "**/*.tsx",
+      "**/*.jsx",
+      "**/*.json",
+      "**/*.md",
+      "!node_modules",
+      "!**/.next"
+    ]
   },
   "formatter": {
     "enabled": true,
@@ -27,10 +35,6 @@
   },
   "assist": {
     "enabled": true,
-    "actions": {
-      "source": {
-        "organizeImports": "on"
-      }
-    }
+    "actions": {}
   }
 }
