--- a/apps/back-azure/package.json
+++ b/apps/back-azure/package.json
@@ -9,13 +9,15 @@
     "clean": "rimraf dist",
     "prestart": "pnpm run clean && pnpm run build",
     "start": "func start",
-    "dev": "concurrently \"pnpm:watch\" \"pnpm:start\"",
+    "dev": "tsx watch src/app.ts",
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
     "@azure/functions": "^4.0.0",
+    "@hono/node-server": "^1.17.1",
     "@marplex/hono-azurefunc-adapter": "^1.0.1",
-    "hono": "^4.8.4"
+    "hono": "^4.8.4",
+    "tsx": "^4.20.3"
   },
   "devDependencies": {
     "@types/node": "18.x",
