--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -1,16 +1,11 @@
-FROM node:22-alpine
+FROM mcr.microsoft.com/azure-functions/node:4-node22
+
+ENV AzureWebJobsScriptRoot=/home/site/wwwroot \
+    AzureFunctionsJobHost__Logging__Console__IsEnabled=true
 
 RUN npm install -g pnpm
 
-WORKDIR /app
-
-COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
-COPY apps/backend/package.json ./apps/backend/
-COPY apps/frontend/package.json ./apps/frontend/
-
+WORKDIR /home/site/wwwroot
+COPY . .
 RUN pnpm install
-
-COPY apps/backend ./apps/backend
-COPY apps/frontend ./apps/frontend
-
-EXPOSE 8000
+RUN pnpm build
