--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,9 +15,15 @@
   "dependencies": {
     "@azure/functions": "^4.0.0",
     "@hono/node-server": "^1.17.1",
+    "@langchain/core": "^0.3.66",
+    "@langchain/google-genai": "^0.2.16",
     "@marplex/hono-azurefunc-adapter": "^1.0.1",
+    "dotenv": "^17.2.1",
     "hono": "^4.8.4",
-    "tsx": "^4.20.3"
+    "langchain": "^0.3.30",
+    "prompts": "link:@langchain/core/prompts",
+    "tsx": "^4.20.3",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@types/node": "18.x",
