--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@azure/functions": "^4.0.0",
     "@hono/node-server": "^1.17.1",
+    "@hono/zod-openapi": "^1.1.0",
     "@langchain/core": "^0.3.66",
     "@langchain/google-genai": "^0.2.16",
     "@marplex/hono-azurefunc-adapter": "^1.0.1",
