--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,15 +15,18 @@
   "dependencies": {
     "@azure/functions": "^4.0.0",
     "@hono/node-server": "^1.17.1",
-    "@hono/zod-openapi": "^1.1.0",
+    "@hono/zod-validator": "^0.7.2",
     "@langchain/core": "^0.3.66",
     "@langchain/google-genai": "^0.2.16",
     "@marplex/hono-azurefunc-adapter": "^1.0.1",
+    "@scalar/hono-api-reference": "^0.9.13",
     "dotenv": "^17.2.1",
     "hono": "^4.8.4",
+    "hono-openapi": "0.5.0-rc.1",
     "langchain": "^0.3.30",
     "tsx": "^4.20.3",
-    "zod": "^4.0.14"
+    "zod": "^4.0.17",
+    "zod-openapi": "^5.3.1"
   },
   "devDependencies": {
     "@types/node": "18.x",
