--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,11 +15,11 @@
   "dependencies": {
     "@azure/functions": "^4.0.0",
     "@hono/node-server": "^1.17.1",
+    "@hono/swagger-ui": "^0.5.2",
     "@hono/zod-validator": "^0.7.2",
     "@langchain/core": "^0.3.66",
     "@langchain/google-genai": "^0.2.16",
     "@marplex/hono-azurefunc-adapter": "^1.0.1",
-    "@scalar/hono-api-reference": "^0.9.13",
     "dotenv": "^17.2.1",
     "hono": "^4.8.4",
     "hono-openapi": "0.5.0-rc.1",
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@types/node": "18.x",
+    "@types/swagger-ui-dist": "^3.30.6",
     "concurrently": "^9.2.0",
     "rimraf": "^5.0.0",
     "typescript": "^5.8.3"
