--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -30,5 +30,5 @@ jobs:
       # ここでDockerイメージのビルドとACRへのプッシュする。
       - name: Build and push Docker image
         run: |
-          docker-compose --profile frontend build
-          docker push buildchatest.azurecr.io/buildcha:${{ github.sha }}
+          docker compose --profile frontend build
+          docker compose --profile frontend push
