--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -22,7 +22,7 @@
     "@marplex/hono-azurefunc-adapter": "^1.0.1",
     "dotenv": "^17.2.1",
     "hono": "^4.8.4",
-    "hono-openapi": "0.5.0-rc.1",
+    "hono-openapi": "0.4.8",
     "langchain": "^0.3.30",
     "tsx": "^4.20.3",
     "zod": "^4.0.17",
