--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -1,10 +1,7 @@
 name: CI to Azure Container Registry
 
 # ワークフローが実行されるトリガー条件。
-# mainブランチへのpushしたときに発動させてる
-on:
-  push:
-    branches: [main]
+on: workflow_dispatch
 
 jobs:
   build:
