--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,7 +10,7 @@
     "prestart": "pnpm run clean && pnpm run build",
     "start": "func start",
     "dev": "tsx watch src/app.ts",
-    "migrate": "prisma migrate dev",
+    "migrate": "prisma migrate dev --schema prisma/schema.prisma",
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
