--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,6 +20,7 @@
     "@hono/zod-validator": "^0.7.2",
     "@langchain/core": "^0.3.66",
     "@langchain/google-genai": "^0.2.16",
+    "@langchain/openai": "^0.6.9",
     "@marplex/hono-azurefunc-adapter": "^1.0.1",
     "dotenv": "^17.2.1",
     "hono": "^4.8.4",
