--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,14 +2,14 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/src/functions/*.js",
+  "main": "dist/src/functions/index.js",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
     "clean": "rimraf dist",
     "prestart": "pnpm run clean && pnpm run build",
     "start": "func start",
-    "dev": "tsx watch src/app.ts",
+    "dev": "tsx watch src/local.ts",
     "migrate": "prisma migrate dev --schema prisma/schema.prisma",
     "test": "echo \"No tests yet...\""
   },
