--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,7 +11,7 @@
     "start": "func start",
     "dev": "tsx watch src/local.ts",
     "migrate": "prisma migrate dev --schema prisma/schema.prisma",
-    "test": "echo \"No tests yet...\""
+    "test": "jest"
   },
   "dependencies": {
     "@azure/functions": "^4.0.0",
@@ -32,10 +32,13 @@
   },
   "devDependencies": {
     "@prisma/client": "^6.14.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "18.x",
     "@types/swagger-ui-dist": "^3.30.6",
     "concurrently": "^9.2.0",
+    "jest": "^30.1.2",
     "rimraf": "^5.0.0",
+    "ts-jest": "^29.4.1",
     "typescript": "^5.8.3"
   }
 }
