fix: compareObject のエンドポイントを追加

--- a/biome.json
+++ b/biome.json
@@ -14,7 +14,8 @@
       "**/*.json",
       "**/*.md",
       "!node_modules",
-      "!**/.next"
+      "!**/.next",
+      "!.pnpm-store/**"
     ]
   },
   "formatter": {
