refactor: ファイル構造とファイル名の変更

--- a/biome.json
+++ b/biome.json
@@ -15,7 +15,8 @@
       "**/*.md",
       "!node_modules",
       "!**/.next",
-      "!.pnpm-store/**"
+      "!.pnpm-store/**",
+      "!**/generated/**"
     ]
   },
   "formatter": {
