--- a/apps/backend-workers/package.json
+++ b/apps/backend-workers/package.json
@@ -2,7 +2,7 @@
   "name": "backend-workers",
   "type": "module",
   "scripts": {
-    "dev": "wrangler dev",
+    "dev": "wrangler dev --port 8787 --ip 0.0.0.0",
     "deploy": "wrangler deploy --minify",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings",
     "local:migration": "wrangler d1 migrations apply buildcha --local",
