feat: Jestを用いたテスト環境を追加し、テスト用の設定を整備

--- a/apps/backend-workers/.gitignore
+++ b/apps/backend-workers/.gitignore
@@ -37,3 +37,6 @@ lerna-debug.log*
 
 # testに関する設定
 /testImage
+
+# test/__mocks__/cloudflareWorkersMock.ts
+**/test/__mocks__/cloudflareWorkersMock.ts
