--- a/apps/backend-workers/package.json
+++ b/apps/backend-workers/package.json
@@ -6,7 +6,8 @@
     "deploy": "wrangler deploy --minify",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings",
     "local:migration": "wrangler d1 migrations apply buildcha --local",
-    "remote:migration": "wrangler d1 migrations apply buildcha --remote"
+    "remote:migration": "wrangler d1 migrations apply buildcha --remote",
+    "test": "jest"
   },
   "dependencies": {
     "@hono/swagger-ui": "^0.5.2",
@@ -22,7 +23,10 @@
     "zod-openapi": "^5.3.1"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "jest": "^30.1.3",
     "prisma": "^6.15.0",
+    "ts-jest": "^29.4.1",
     "wrangler": "^4.4.0"
   }
 }
