--- a/apps/backend-workers/wrangler.jsonc
+++ b/apps/backend-workers/wrangler.jsonc
@@ -31,7 +31,7 @@
 	],
 	"vectorize": [
 		{
-			"binding": "VECTORIZE",
+			"binding": "VECTORIZE_INDEX",
 			"index_name": "buildcha-vector"
 		}
 	],
