--- a/apps/backend-workers/package.json
+++ b/apps/backend-workers/package.json
@@ -10,12 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "@hono/swagger-ui": "^0.5.2",
     "@hono/zod-validator": "^0.7.2",
     "@langchain/core": "^0.3.66",
     "@langchain/openai": "^0.6.9",
     "@prisma/adapter-d1": "^6.15.0",
     "@prisma/client": "^6.15.0",
+    "@scalar/hono-api-reference": "^0.9.18",
     "better-auth": "^1.3.8",
     "hono": "^4.9.6",
     "hono-openapi": "0.4.8",
