feat: クエスト詳細画面作成、open-next整備

--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -19,9 +19,15 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@apps/backend/*": ["../backend-workers/src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "backend-workers/dist",
+    "backend-workers/src/ai",
+    "backend-workers/src/config.ts"
+  ]
 }
