--- a/apps/backend-workers/package.json
+++ b/apps/backend-workers/package.json
@@ -1,13 +1,22 @@
 {
   "name": "backend-workers",
   "type": "module",
+  "private": true,
+  "sideEffects": false,
+  "main": "./dist/client.js",
+  "types": "./dist/client.d.ts",
+  "exports": {
+    ".": "./dist/client.js",
+    "./types": "./dist/client.d.ts"
+  },
   "scripts": {
     "dev": "wrangler dev --port 8787 --ip 0.0.0.0",
     "deploy": "wrangler deploy --minify",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings",
     "local:migration": "wrangler d1 migrations apply buildcha --local",
     "remote:migration": "wrangler d1 migrations apply buildcha --remote",
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.7.2",
