--- a/apps/backend-workers/wrangler.jsonc
+++ b/apps/backend-workers/wrangler.jsonc
@@ -3,6 +3,7 @@
 	"name": "backend",
 	"main": "src/app.ts",
 	"account_id": "4beba607eac3ca6a8e906c6a34cb6f18",
+	"workers_dev": true,
 	"compatibility_date": "2025-09-05",
 	"compatibility_flags": [
 		"nodejs_compat"
