--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -32,6 +32,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250913.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "22.7.9",
     "@types/react": "^19",
