--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -19,15 +19,10 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"],
-      "@apps/backend/*": ["../backend-workers/src/*"]
+      "@/*": ["./*"]
     }
   },
+  "types": ["node", "next/types", "@cloudflare/workers-types"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": [
-    "node_modules",
-    "backend-workers/dist",
-    "backend-workers/src/ai",
-    "backend-workers/src/config.ts"
-  ]
+  "exclude": ["node_modules"]
 }
