--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend-workers",
+  "name": "backend",
   "type": "module",
   "scripts": {
     "dev": "wrangler dev --port 8787 --ip 0.0.0.0",
