--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -10,7 +10,7 @@
     "jsxImportSource": "hono/jsx",
     "outDir": "./dist",
     "declaration": true,
-    "types": ["@cloudflare/workers-types"]
+    "types": ["@cloudflare/workers-types", "@types/jest"]
   },
   "include": ["src", "worker-configuration.d.ts"],
   "exclude": ["node_modules", "dist"]
