chore: .wranglerと.open-next、distディレクトリをビルドから除外し、README.mdの表記を修正

--- a/biome.json
+++ b/biome.json
@@ -19,7 +19,9 @@
       "!**/generated/**",
       "!apps/**/worker-configuration.d.ts",
       "!apps/**/cloudflare-env.d.ts",
-      "!**/.wrangler"
+      "!**/.wrangler",
+      "!**/.open-next",
+      "!**/dist"
     ]
   },
   "formatter": {
