--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250913.0",
+    "@jest/globals": "^30.1.2",
     "@types/jest": "^29.4.3",
     "jest": "^29.4.3",
     "prisma": "^6.15.0",
