--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
     "dev:back": "pnpm -F backend dev",
     "dev:front": "pnpm -F frontend dev",
     "dev": "pnpm dev:back & pnpm dev:front",
+    "build:front": "pnpm -F frontend build",
+    "build:back": "pnpm -F backend build",
+    "build": "pnpm build:front & pnpm build:back",
+    "deploy:front": "pnpm -F frontend deploy",
+    "deploy:back": "pnpm -F backend deploy",
+    "deploy": "pnpm deploy:front & pnpm deploy:back",
+    "upload:front": "pnpm -F frontend upload",
     "lint": "biome lint .",
     "format": "biome format --write .",
     "check": "biome check .",
