--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "front": "pnpm -F frontend",
     "dev:back": "pnpm -F backend dev",
     "dev:front": "pnpm -F frontend dev",
-    "dev": "pnpm dev:back & pnpm dev:front",
+    "dev": "pnpm dev:back && pnpm dev:front",
     "build:front": "pnpm -F frontend build",
     "build:back": "pnpm -F backend build",
-    "build": "pnpm build:front & pnpm build:back",
+    "build": "pnpm build:back && pnpm build:front",
     "deploy:front": "pnpm -F frontend deploy",
     "deploy:back": "pnpm -F backend deploy",
-    "deploy": "pnpm deploy:front & pnpm deploy:back",
+    "deploy": "pnpm deploy:back && pnpm deploy:front",
     "upload:front": "pnpm -F frontend upload",
     "lint": "biome lint .",
     "format": "biome format --write .",
