feat: TypeScriptを依存関係に追加し、pnpm-lock.yamlを更新

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -39,6 +39,7 @@
     "jest": "^29.4.3",
     "prisma": "^6.15.0",
     "ts-jest": "^29.4.3",
-    "wrangler": "^4.4.0"
+    "wrangler": "^4.4.0",
+    "typescript": "^5"
   }
 }
