fix: ビルド、デプロイ、アップロードコマンドの実行方法を修正し、`run`を追加

--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "dev:back": "pnpm -F backend dev",
     "dev:front": "pnpm -F frontend dev",
     "dev": "pnpm dev:back && pnpm dev:front",
-    "build:front": "pnpm -F frontend build",
-    "build:back": "pnpm -F backend build",
+    "build:front": "pnpm -F frontend run build",
+    "build:back": "pnpm -F backend run build",
     "build": "pnpm build:back && pnpm build:front",
-    "deploy:front": "pnpm -F frontend deploy",
-    "deploy:back": "pnpm -F backend deploy",
+    "deploy:front": "pnpm -F frontend run deploy",
+    "deploy:back": "pnpm -F backend run deploy",
     "deploy": "pnpm deploy:back && pnpm deploy:front",
-    "upload:front": "pnpm -F frontend upload",
+    "upload:front": "pnpm -F frontend run upload",
     "lint": "biome lint .",
     "format": "biome format --write .",
     "check": "biome check .",
