--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -24,6 +24,7 @@
     "@react-three/fiber": "^9.2.0",
     "@types/three": "^0.178.1",
     "backend": "workspace:*",
+    "better-auth": "^1.3.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
