--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -30,8 +30,10 @@
     "lucide-react": "^0.525.0",
     "motion": "^12.23.12",
     "next": "15.3.5",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "three": "^0.178.0",
     "zustand": "^5.0.8"
