--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -23,14 +23,18 @@
   "dependencies": {
     "@hono/zod-validator": "^0.7.2",
     "@langchain/cloudflare": "^0.1.1",
-    "@langchain/core": "^0.3.75",
+    "@langchain/community": "^0.3.57",
+    "@langchain/core": "^0.3.77",
     "@langchain/openai": "^0.6.9",
+    "@langchain/textsplitters": "^0.1.0",
     "@prisma/adapter-d1": "^6.15.0",
     "@prisma/client": "^6.15.0",
     "@scalar/hono-api-reference": "^0.9.18",
     "better-auth": "^1.3.8",
     "hono": "^4.9.6",
     "hono-openapi": "0.4.8",
+    "pdf-parse": "^2.1.7",
+    "pdfjs-serverless": "^1.1.0",
     "zod": "^4.0.17",
     "zod-openapi": "^5.3.1"
   },
@@ -41,7 +45,7 @@
     "jest": "^29.4.3",
     "prisma": "^6.15.0",
     "ts-jest": "^29.4.3",
-    "wrangler": "^4.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wrangler": "^4.4.0"
   }
 }
