--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -18,7 +18,9 @@
     "test": "jest",
     "build": "pnpm build:prisma && pnpm build:tsc",
     "build:tsc": "tsc",
-    "build:prisma": "npx prisma generate"
+    "build:prisma": "npx prisma generate",
+    "create-vectorize":"npx wrangler vectorize create buildcha-vector  --dimensions 1536 --metric cosine",
+    "delete-vectorize":"npx wrangler vectorize delete buildcha-vector"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.7.2",
