--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -27,6 +27,7 @@
     "@langchain/cloudflare": "^0.1.1",
     "@langchain/community": "^0.3.57",
     "@langchain/core": "^0.3.77",
+    "@langchain/langgraph": "^0.4.9",
     "@langchain/openai": "^0.6.9",
     "@langchain/textsplitters": "^0.1.0",
     "@prisma/adapter-d1": "^6.15.0",
