feat: AIチャットボットにAIエージェント機能を追加

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -5,3 +5,6 @@ USE_OPENAI_MODEL_NAME=
 # Better-auth
 BETTER_AUTH_SECRET=
 BETTER_AUTH_URL=http://localhost:8787 # Base URL of your app
+
+# GitHub MCP
+GITHUB_MCP_TOKEN=
