--- a/apps/backend/wrangler.jsonc
+++ b/apps/backend/wrangler.jsonc
@@ -20,7 +20,8 @@
 	"r2_buckets": [
 		{
 		"binding": "BUCKET",
-		"bucket_name": "buildcha"
+		"bucket_name": "buildcha",
+		"preview_bucket_name": "buildcha"
 		}
 	],
 	"d1_databases": [
