--- a/apps/frontend/wrangler.jsonc
+++ b/apps/frontend/wrangler.jsonc
@@ -6,8 +6,9 @@
   "workers_dev": true,
   "compatibility_date": "2025-09-05",
   "compatibility_flags": [
-    "nodejs_compat"
+    "nodejs_compat", "global_fetch_strictly_public"
   ],
+  "preview_urls": true,
   "observability": {
     "enabled": true
   },
