chore: MCPのデプロイコマンドを追加

--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "back": "pnpm -F backend",
     "front": "pnpm -F frontend",
+    "mcp": "pnpm -F mcp",
     "dev:back": "pnpm -F backend dev",
     "dev:front": "pnpm -F frontend dev",
-    "dev": "pnpm dev:back && pnpm dev:front",
+    "dev:mcp": "pnpm -F mcp dev",
+    "dev": "pnpm dev:back && pnpm dev:front && pnpm dev:mcp",
     "build:front": "npx next-sitemap && pnpm -F frontend run build",
     "build:back": "pnpm -F backend run build",
-    "build": "pnpm build:back && pnpm build:front",
+    "build:mcp": "pnpm -F mcp run build",
+    "build": "pnpm build:back && pnpm build:front && pnpm build:mcp",
     "deploy:front": "pnpm -F frontend run deploy",
     "deploy:back": "pnpm -F backend run deploy",
-    "deploy": "pnpm deploy:back && pnpm deploy:front",
+    "deploy:mcp": "pnpm -F mcp run deploy",
+    "deploy": "pnpm deploy:back && pnpm deploy:front && pnpm deploy:mcp",
     "upload:front": "pnpm -F frontend run upload",
     "lint": "biome lint .",
     "format": "biome format --write .",
