--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "build:opennext": "opennextjs-cloudflare build",
+    "build:sitemap": "next-sitemap",
     "start": "next start",
     "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
     "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
